Added ability to load video on correct frame this addresses issue #83 of the gui
